# lettr-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: client.rs  config.rs  domains.rs  emails.rs  error.rs  lib.rs  templates.rs  webhooks.rs
