[package]
name = "lettr"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

license = "MIT"
readme = "README.md"

authors = ["Lettr <support@lettr.com>"]
repository = "https://github.com/lettr/lettr-rust"
homepage = "https://lettr.com"
documentation = "https://docs.rs/lettr"

categories = ["email", "web-programming"]
keywords = ["email", "lettr", "transactional-email"]
description = "Official Rust SDK for the Lettr Email API."

[features]
default = ["native-tls"]

blocking = ["reqwest/blocking", "maybe-async/is_sync"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
maybe-async = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
